# quircs

./: Cargo.toml  LICENSE  README.md  extract.prof  identify.prof
.github/workflows/: ci.yml
examples/: qrtest.rs
src/: decode.rs  error.rs  identify.rs  lib.rs  quirc.rs  version_db.rs
tests/: quircs.rs
