[package]
name = "quircs"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
version = "0.9.0"
license = "MIT"
documentation = "https://docs.rs/qurics/"
repository = "https://github.com/dignifiedquire/quircs"
homepage = "https://github.com/dignifiedquire/quircs"
description = "QR code detection and scanning. Pure Rust."
readme = "README.md"
edition = "2018"

keywords = ["qr", "scanner"]
categories = ["encoding", "multimedia"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
num-derive = "0.3.0"
num-traits = "0.2.11"
thiserror = "1.0.19"

[dev-dependencies]
image = "0.23.4"


